package com.logismart.infraestructura.abstractfactory;

/** Producto abstracto — calcula costos según la región. */
public interface CalculadorCostos {
    double calcularCosto(double peso);
}
